ajuste das paginas

--- a/home.html
+++ b/home.html
@@ -22,10 +22,10 @@
                     <p>Pagina de home está em construção!!</p>
                 </article>
                 <section>
-                    <p>conteiúdo em constraução!!</p>
+                    <p>conteúdo em constraução!!</p>
                 </section>
                 <section class="conteiudo">
-                    <p>conteiúdo em constraução</p>
+                    <p>conteúdo em constraução</p>
                 </section>
                 <footer>
                     <p id="rodape">Developed by group</p>
