--- a/noticia.html
+++ b/noticia.html
@@ -23,7 +23,7 @@
                     <p>Pagina de noticias em construção!!</p>
                 </article>
                 <section>
-                    <p>Conteiúdos em constraução!!</p>
+                    <p>Conteúdos em constraução!!</p>
                 </section>
                 <section class="noticia-internacional">
                     <p>Noticias internacionais em construções</p>
